Fixed image sizes and spacing

--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,7 @@
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	padding: 1rem 1rem;
+	padding: 1rem;
 }
 
 .navbar-logo {
@@ -31,7 +31,7 @@
 
 @media screen and (min-width: 600px) {
 	.navbar-logo {
-		padding: 2rem 2rem 1rem 7rem;
+		padding: 2rem 2rem 2rem 8rem;
 		width: 30%;
 	}
 }
